Revert "Ngrok deployment failure"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,21 +74,13 @@ services:
       NGROK_DOMAIN: ${NGROK_DOMAIN:-}
     entrypoint: ["sh", "-lc"]
     command: >
-      # NOTE: Compose env files treat quotes as literal characters; sanitize here.
-      token="$${NGROK_AUTHTOKEN:-}";
-      token="$${token#\"}"; token="$${token%\"}"; token="$${token#\'}"; token="$${token%\'}";
-      token="$$(printf "%s" "$${token}" | tr -d "\r" | xargs)";
-      if [ -z "$${token}" ]; then
+      if [ -z "$${NGROK_AUTHTOKEN:-}" ]; then
         echo "ERROR: NGROK_AUTHTOKEN is required (set it in .env.docker)" >&2;
         exit 2;
       fi;
-      export NGROK_AUTHTOKEN="$${token}";
-      domain="$${NGROK_DOMAIN:-}";
-      domain="$${domain#\"}"; domain="$${domain%\"}"; domain="$${domain#\'}"; domain="$${domain%\'}";
-      domain="$$(printf "%s" "$${domain}" | tr -d "\r" | xargs)";
-      if [ -n "$${domain}" ]; then
+      if [ -n "$${NGROK_DOMAIN:-}" ]; then
         # Accept either a bare hostname (reserved.ngrok.app) or a pasted URL (https://reserved.ngrok.app).
-        domain="$${domain#http://}"; domain="$${domain#https://}"; domain="$${domain%%/*}"; domain="$${domain%.}";
+        domain="$${NGROK_DOMAIN#http://}"; domain="$${domain#https://}"; domain="$${domain%%/*}"; domain="$${domain%.}";
         exec ngrok http web:8000 --domain="$${domain}";
       else
         exec ngrok http web:8000;
