--- a/.env.docker.example
+++ b/.env.docker.example
@@ -32,10 +32,8 @@ DB_PASSWORD=change-me
 # DICOM_PORT=11112
 
 # Optional: ngrok (used by the compose 'ngrok' profile)
-# IMPORTANT: do not wrap these values in quotes; Docker Compose treats quotes as literal.
 # NGROK_AUTHTOKEN=your_ngrok_authtoken
-# Optional reserved domain (only if you actually reserved it in your ngrok account):
-# NGROK_DOMAIN=your-reserved-domain.ngrok.app
+# NGROK_DOMAIN=reserved.ngrok.app
 
 # Optional: media/static serving behavior
 # SECURITY: Keep this False for public production. Serve media via authenticated endpoints only.
